--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ Options +FollowSymlinks
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.php [L,QSA,E=PATH_INFO:$1]
+RewriteRule ^(.*)$ index.php?/$1 [QSA,PT,L]
 #RewriteCond %{SCRIPT_FILENAME} \.php [NC]
 #RewriteRule "public/" '' [R=403,L]
 </IfModule>
